WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270077
[UnifiedPDF] PluginView::contentScaleFactor reports an incorrect content scale factor
https://bugs.webkit.org/show_bug.cgi?id=270077
Summary
[UnifiedPDF] PluginView::contentScaleFactor reports an incorrect content scal...
Abrar Rahman Protyasha
Reported
2024-02-26 03:36:12 PST
This method plumbs out the result of the plugin's scaleFactor() method, and not the namesake. This causes WebPage::dictionaryPopupInfoForSelectionInPDFPlugin to generate the wrong TI data.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-26 03:36:23 PST
<
rdar://problem/123624248
>
Abrar Rahman Protyasha
Comment 2
2024-02-26 03:42:03 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25098
EWS
Comment 3
2024-02-26 14:22:39 PST
Committed
275347@main
(17535c0db172): <
https://commits.webkit.org/275347@main
> Reviewed commits have been landed. Closing PR #25098 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug